@@ -1,8 +1,8 @@
 # Generated by mksrcinfo v8
-# Wed Aug 22 18:30:01 UTC 2018
+# Fri Aug 31 21:53:29 UTC 2018
 pkgbase = return-to-the-roots-git
 	pkgdesc = Free/libre implementation of The Settlers II game engine
-	pkgver = r3946.826300c2
+	pkgver = r3949.2d1e2c02
 	pkgrel = 1
 	url = https://siedler25.org/
 	install = return-to-the-roots.install
@@ -22,6 +22,7 @@ pkgbase = return-to-the-roots-git
 	depends = sdl_mixer
 	depends = miniupnpc
 	depends = lua52
+	optdepends = siedler2-data
 	provides = return-to-the-roots
 	conflicts = return-to-the-roots
 	conflicts = s25rttr
@@ -53,7 +54,7 @@ pkgbase = return-to-the-roots-git
 	sha256sums = SKIP
 	sha256sums = SKIP
 	sha256sums = b623d74292ca332b65290f15adb0c41994a80eb4f5d247c713a0d43775f9e8f8
-	sha256sums = edb41253442928a2313f856021c06f6d2999b780f0426c05cd7bdb2381a627ea
+	sha256sums = 888a1cd55350971ec3660de79c82760be63ed40617e8ef6931c20b07bc73e1a9
 
 pkgname = return-to-the-roots-git
 
