@@ -1,3 +1,4 @@
 post_install() {
 	echo "  Put your original Settlers 2 DATA and GFX folders in /usr/share/s25rttr/S2/"
+	echo "  (or install siedler2-data package from the AUR)"
 }
